Tue Sep  3 00:22:43 2002  Minero Aoki  <aamine@loveruby.net>

	* gc.c (gc_sweep): does reclaim nodes in also compile time, if we
	  can.

	* ruby.c (load_file): omit GC if we can.

	* parse.y (ruby_parser_stack_on_heap): new function.

	* intern.h (ruby_parser_stack_on_heap): added.

Sun Aug 25 20:10:32 2002  Wakou Aoyama  <wakou@ruby-lang.org>

	* lib/cgi.rb (CGI#form): fix ruby-bugs-ja:PR#280, add default action.

Sat Aug 24 13:57:28 2002  Tanaka Akira  <akr@m17n.org>

	* lib/time.rb (Time.rfc2822, Time#rfc2822): preserve localtimeness.

Wed Aug 21 16:43:19 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_cleanup): should not modify the global
	  variable curr_thread.

Tue Aug 20 19:39:03 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* file.c (rb_file_s_expand_path): accept drive letter on Cygwin.

	* file.c (is_absolute_path): ditto.

Mon Aug 19 19:01:55 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* misc/inf-ruby.el (inf-ruby-keys): ruby-send-definition
	  conflicted with ruby-insert-end.

	* misc/inf-ruby.el (inferior-ruby-mode): compilation-minor-mode.

	* misc/inf-ruby.el (ruby-send-region): send as here document to
	  adjust source file/line.  [ruby-talk:47113], [ruby-dev:17965]

	* misc/inf-ruby.el (ruby-send-terminator): added to make unique
	  terminator.

Mon Aug 19 17:08:19 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_initialize_m): frozen check should be moved here
	  from rb_reg_initialize().

Mon Aug 19 15:38:44 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (sort_2): comparison should be done as signed long.

	* array.c (sort_2): should return int, not VALUE.

Mon Aug 19 12:38:33 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_thread_save_context, rb_thread_restore_context):
	  save/restore SEH chain on MS-Windows at thread switch.
	  [ruby-win32:273]

	* eval.c (win32_get_exception_list, win32_set_exception_list):
	  added.
