@@ -3122,14 +3122,11 @@ rb_eval(self, n)
 		super = 0;
 	    }
 
-	    klass = 0;
 	    if ((ruby_class == rb_cObject) && rb_autoload_defined(node->nd_cname)) {
 		rb_autoload_load(node->nd_cname);
 	    }
 	    if (rb_const_defined_at(ruby_class, node->nd_cname)) {
 		klass = rb_const_get(ruby_class, node->nd_cname);
-	    }
-	    if (klass) {
 		if (TYPE(klass) != T_CLASS) {
 		    rb_raise(rb_eTypeError, "%s is not a class",
 			     rb_id2name(node->nd_cname));
@@ -3169,14 +3166,11 @@ rb_eval(self, n)
 	    if (NIL_P(ruby_class)) {
 		rb_raise(rb_eTypeError, "no outer class/module");
 	    }
-	    module = 0;
 	    if ((ruby_class == rb_cObject) && rb_autoload_defined(node->nd_cname)) {
 		rb_autoload_load(node->nd_cname);
 	    }
 	    if (rb_const_defined_at(ruby_class, node->nd_cname)) {
 		module = rb_const_get(ruby_class, node->nd_cname);
-	    }
-	    if (module) {
 		if (TYPE(module) != T_MODULE) {
 		    rb_raise(rb_eTypeError, "%s is not a module",
 			     rb_id2name(node->nd_cname));
@@ -4561,8 +4555,11 @@ rb_call0(klass, recv, id, argc, argv, body, nosuper)
 		}
 
 		if (trace_func) {
-		    call_trace_func("call", b2->nd_file, nd_line(b2),
-				    recv, id, klass);
+		    char *file = b2->nd_file;
+		    int line = nd_line(b2);
+		    call_trace_func("call", file, line, recv, id, klass);
+		    ruby_sourcefile = file;
+		    ruby_sourceline = line;
 		}
 		result = rb_eval(recv, body);
 	    }
